tests/ui/impl-trait/call_method_without_import.no_import.stderr
error[E0599]: no method named `fmt` found for opaque type `impl Debug` in the current scope
  --> $DIR/call_method_without_import.rs:17:11
   |
LL |         x.fmt(f);
   |           ^^^ method not found in `impl Debug`
   |
  --> $SRC_DIR/core/src/fmt/mod.rs:LL:COL
   |
   = note: the method is available for `impl Debug` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Debug` which provides `fmt` is implemented but not in scope; perhaps you want to import it
   |
LL + use std::fmt::Debug;
   |

error[E0599]: no method named `fmt` found for mutable reference `&mut impl Debug` in the current scope
  --> $DIR/call_method_without_import.rs:26:11
   |
LL |         x.fmt(f);
   |           ^^^ method not found in `&mut impl Debug`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following traits which provide `fmt` are implemented but not in scope; perhaps you want to import one of them
   |
LL + use std::fmt::Debug;
   |
LL + use std::fmt::Pointer;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
